prevent layout shift on gallery on first load 2

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,9 +9,12 @@
 }
 
 @layer base {
+  html {
+    @apply overflow-y-scroll;
+  }
+
   body {
     @apply bg-purple-75;
-    @apply overflow-y-scroll;
   }
 
   html,
